--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>sir</groupId>
     <artifactId>SmartHome</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+
+<!--    VERSION     -->
+
+    <version>1.0.0</version>
+
+<!--    VERSION END     -->
+
     <name>SmartHome</name>
     <description>SmartHome</description>
     <url/>
@@ -23,6 +29,9 @@
     <properties>
         <java.version>17</java.version>
     </properties>
+
+<!--    dependencies    -->
+
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -36,8 +45,9 @@
             <version>5.14.2</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
+
+<!--    dependencies end    -->
 
     <build>
         <plugins>
